[package]
name = "kill-9"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = "0.16.1"
bevy_egui = "0.36.0"
clap = { version = "4.5.47", features = ["derive"] }
console = "0.16.1"
dialoguer = { version = "0.12.0", features = [
  "completion",
  "editor",
  "fuzzy-select",
  "history",
] }
indicatif = "0.18.0"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.11.2"
rfd = "0.15.4"
tokio = { version = "1.47.1", features = ["rt", "time"] }
